--- a/app/src/main/res/layout/activity_portal.xml
+++ b/app/src/main/res/layout/activity_portal.xml
@@ -17,6 +17,8 @@
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:orientation="vertical"
+      android:showDividers="middle"
+      android:divider="@drawable/liner_divider"
       >
     <TextView
         android:layout_width="match_parent"
@@ -26,60 +28,37 @@
         android:textSize="18sp"
         />
     <Button
-        android:layout_marginTop="8dp"
         android:id="@+id/btn_pop_movie"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
         android:text="@string/name_pop_movie"
-        android:textColor="@android:color/primary_text_dark"
-        android:background="@android:color/holo_blue_dark"
         />
     <Button
         android:id="@+id/btn_stock_hawk"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
         android:text="@string/name_stock_hawk"
-        android:textColor="@android:color/primary_text_dark"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_marginTop="8dp"
         />
     <Button
         android:id="@+id/btn_build_bigger"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
         android:text="@string/name_build_it_bigger"
-        android:textColor="@android:color/primary_text_dark"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_marginTop="8dp"
         />
     <Button
         android:id="@+id/btn_material_app"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
         android:text="@string/name_material_app"
-        android:textColor="@android:color/primary_text_dark"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_marginTop="8dp"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         />
     <Button
         android:id="@+id/btn_go_ubiquitous"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
         android:text="@string/name_go_ubiquitous"
-        android:textColor="@android:color/primary_text_dark"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_marginTop="8dp"
         />
     <Button
         android:id="@+id/btn_capstone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
         android:text="@string/name_capstone"
-        android:textColor="@android:color/primary_text_dark"
-        android:background="@android:color/holo_blue_dark"
-        android:layout_marginTop="8dp"
         />
   </LinearLayout>
 </RelativeLayout>
