--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,11 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <!-- Button Style -->
+  <style name="ButtonStyle">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:textColor">@android:color/primary_text_dark</item>
+    <item name="android:background">@android:color/holo_blue_dark</item>
+  </style>
 </resources>
