project2 - Popular Movies : stage 2 - add Favorite button.

--- a/popmovies/src/main/res/layout/fragment_movie_list.xml
+++ b/popmovies/src/main/res/layout/fragment_movie_list.xml
@@ -19,7 +19,24 @@
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       android:background="?attr/colorPrimary"
-      app:popupTheme="@style/AppTheme.PopupOverlay"/>
+      app:popupTheme="@style/AppTheme.PopupOverlay">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"
+        android:layout_marginLeft="200dp"
+        >
+      <Spinner
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:id="@+id/category_spinner"
+          android:layout_alignParentRight="true"
+          android:entries="@array/array_category"
+          android:popupBackground="@color/colorPrimaryDark"
+          />
+    </RelativeLayout>
+
+  </android.support.v7.widget.Toolbar>
   </android.support.design.widget.AppBarLayout>
 
   <android.support.v7.widget.RecyclerView
