--- a/popmovies/src/main/res/layout/fragment_movie_detail.xml
+++ b/popmovies/src/main/res/layout/fragment_movie_detail.xml
@@ -31,13 +31,12 @@
       >
     <TextView
         android:id="@+id/title"
-        android:textSize="48dp"
+        android:textSize="48sp"
         android:background="@android:color/holo_green_dark"
         android:textColor="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:text="title"
         android:gravity="center_vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
@@ -61,20 +60,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/release_date"
-        android:text="2015"
         android:layout_toRightOf="@id/image_poster"
         android:layout_below="@id/title"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:layout_marginTop="16dp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/runtime"
-        android:text="-"
+        android:text="@string/runtime_default_dash"
         android:layout_below="@+id/release_date"
         android:layout_toRightOf="@id/image_poster"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:textStyle="italic"
         android:layout_marginTop="8dp"
         />
@@ -85,7 +83,7 @@
         android:text="@string/vote_average"
         android:layout_below="@+id/runtime"
         android:layout_toRightOf="@+id/image_poster"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="8dp"
         />
@@ -93,17 +91,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_favorite"
-        android:text="MAKE AS FAVORITE"
+        android:text="@string/button_mark_favorite"
         android:background="@android:color/holo_green_light"
         android:layout_below="@+id/vote_average"
         android:layout_toRightOf="@+id/image_poster"
         />
+     <ImageView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/btn_favorite_img"
+      android:layout_below="@id/btn_favorite"
+      android:layout_toRightOf="@id/image_poster"
+      android:layout_marginTop="@dimen/activity_vertical_margin"
+      android:layout_marginLeft="@dimen/activity_horizontal_margin"
+      android:src="@drawable/ic_favorite_enable"
+      android:background="?attr/selectableItemBackgroundBorderless"
+      />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/over_view"
         android:layout_below="@+id/image_poster"
-        android:text="over_view"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         />
